Rewrite stage 1: minor fixes

--- a/wio.yml
+++ b/wio.yml
@@ -3,7 +3,7 @@ pkg:
   description: "Elecfreaks CAN-BUS 1.2 library for Cosa"
   repository: "https://github.com/hermord/cosa-canbus-wio"
   version: 0.0.1
-  author: "Dmytro Shynkevych"
+  author: "Dmytro Shynkevych <dm.shynk@gmail.com> (https://github.com/hermord)"
   contributors: ["Bob Wei <bobqywei@gmail.com> (https://github.com/bobqywei)"]
   organization: "Waterloop"
   keywords: ["canbus"]
