--- a/app-linux/wio.yml
+++ b/app-linux/wio.yml
@@ -8,11 +8,13 @@ project:
   - app
   compile_options:
     wio_version: 0.5.0
-    default_target: main
 
 targets:
-  main:
-    src: src
+  receiver:
+    src: src/receiver
+    platform: native
+  sender:
+    src: src/sender
     platform: native
 
 dependencies:
